# livskin-revops

./: .env.example  .gitignore  CLAUDE.md  README.md  livskin-config-master.json
infra/docker/erp-flask/: .env.example  Dockerfile  README.md  app.py  config.py  db.py  docker-compose.yml  pyproject.toml  requirements.txt
infra/docker/erp-flask/middleware/: auth_middleware.py
infra/docker/erp-flask/models/: __init__.py  agent_api_call.py  audit_log.py  base.py  catalogo.py  cliente.py  dedup_candidate.py  form_submission.py  gasto.py  infra_snapshot.py  lead.py  lead_touchpoint.py  pago.py  user.py  user_session.py  venta.py
infra/docker/erp-flask/routes/: __init__.py  admin.py  api_catalogo.py  api_client_lookup.py  api_cliente.py  api_config.py  api_dashboard.py  api_gasto.py  api_internal.py  api_internal_sync.py  api_leads.py  api_leads_match.py  api_leads_sync.py  api_libro.py  api_pagos.py  api_venta.py  auth.py  legacy_forms.py  views.py
infra/docker/erp-flask/schemas/: __init__.py  audit.py  auth.py  catalogo.py  client_lookup.py  cliente.py  gasto.py  lead.py  lead_sync.py  pago.py  venta.py
infra/docker/erp-flask/scripts/: backfill_excel.py  install-cron.sh  seed_users.py
infra/docker/erp-flask/services/: __init__.py  agent_resource_service.py  audit_service.py  auth_service.py  capi_emitter_service.py  catalogo_service.py  client_lookup_service.py  cliente_service.py  codgen_service.py  dashboard_service.py  gasto_service.py  infra_snapshot_service.py  lead_intake_service.py  lead_sync_service.py  libro_service.py  normalize_service.py  pago_service.py  system_map_service.py  venta_service.py
infra/docker/erp-flask/templates/: admin_agent_costs.html  admin_audit_log.html  admin_system_health.html  change_password.html  formulario.html  login.html
infra/docker/erp-flask/tests/: conftest.py
infra/docker/erp-flask/tests/routes/: test_admin_routes.py  test_api_clientes_match.py  test_api_internal.py  test_api_leads.py  test_api_leads_sync.py  test_api_routes.py  test_auth_routes.py  test_legacy_forms.py
infra/docker/erp-flask/tests/services/: test_agent_resource_service.py  test_audit_service.py  test_auth_service.py  test_capi_emitter_service.py  test_catalogo_service.py  test_cliente_service.py  (+6 more)
(+286 files in other folders)
