[project]
name = "erp-flask"
version = "0.1.0"
description = "ERP Livskin refactorizado — Flask + SQLAlchemy + Postgres"
requires-python = ">=3.13"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["flask_wtf.*", "flask_limiter.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=services --cov=routes --cov=middleware --cov=schemas --cov-report=term-missing"
markers = [
    "unit: unit tests",
    "integration: integration tests requiring DB",
]

[tool.coverage.run]
omit = [
    "tests/*",
    "scripts/*",
    "*/migrations/*",
    "models/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 75
